<?xml version="1.0"?>
<package format="2">
  <name>ur_controller</name>
  <version>0.0.0</version>
  <description>The ur_controller package</description>

  <maintainer email="wayanagus.dr@gmail.com">agus-darmawan</maintainer>
  <license>TODO</license>
  <author email="wayanagus.dr@gmail.com">agus-darmawan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ur_interface</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>ur_interface</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ur_interface</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
