<?xml version="1.0"?>
<package format="2">
  <name>ur_srvs</name>
  <version>0.0.0</version>
  <description>The ur_srvs package</description>

   <maintainer email="wayanagus.dr@gmail.com">agus-darmawan</maintainer>
  <license>TODO</license>
  <author email="wayanagus.dr@gmail.com">agus-darmawan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>